Amélioration de Mon cv

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              <div class="col-lg-4 text-center mb-4 mb-lg-0">
                  <div class="profile-card card bg-dark text-white p-3 border-secondary">
                          <img src="profilecv.png" alt="Photo de Mariame" class="img-fluid rounded-circle mb-3 profile-photo " id="profile-photo"
-                         data-bs-toggle="tooltip" data-bs-placement="bottom" title="Survolez pour changer d'avatar !">
+                         data-bs-toggle="tooltip" data-bs-placement="bottom" title="Survolez pour changer l'image <3 ">
                          <h4 class="card-title">Mariame aitsidilhassane</h4>
                          <p class="card-text text-white-50">Étudiante IAP</p>
                          </div>
