Amélioration de mon CV

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <form id="contactForm" class="contact-form p-4 rounded shadow-lg bg-dark border border-secondary needs-validation" novalidate>
+                        <form id="contactForm" class="contact-form p-4 rounded shadow-lg bg-dark border border-secondary needs-validation" novalidate method="POST" action="https://formspree.io/f/mwpzjkyq">
                             
                             <div class="alert alert-success d-none" role="alert" id="successMessage">
                                 <i class="bi bi-check-circle-fill me-2"></i> Votre message a été envoyé avec succès !
