Amélioration de mon CV

--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
                                 <div class="col-md-6 mb-3">
                                     <div class="input-group">
                                         <span class="input-group-text bg-primary border-primary text-white"><i class="bi bi-person-badge"></i></span>
-                                        <input type="text" class="form-control bg-secondary text-white border-secondary" placeholder="Votre Nom Complet" required>
+                                        <input type="text" class="form-control bg-secondary text-white border-secondary" placeholder="Votre Nom Complet" id="subject" name="subject" required>
                                         <div class="invalid-feedback">Veuillez entrer votre nom!!</div>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <div class="input-group">
                                         <span class="input-group-text bg-primary border-primary text-white"><i class="bi bi-at"></i></span>
-                                        <input type="email" class="form-control bg-secondary text-white border-secondary" placeholder="Votre Email" required>
+                                        <input type="email" class="form-control bg-secondary text-white border-secondary" placeholder="Votre Email" id="email" name="_replyto" required>
                                         <div class="invalid-feedback">Veuillez entrer une adresse email valide!!</div>
                                     </div>
                                 </div>
@@ -258,12 +258,12 @@
                             <div class="mb-3">
                                 <div class="input-group">
                                     <span class="input-group-text bg-primary border-primary text-white"><i class="bi bi-chat-left-text"></i></span>
-                                    <input type="text" class="form-control bg-secondary text-white border-secondary" placeholder="Objet du Message" required>
+                                    <input type="text" class="form-control bg-secondary text-white border-secondary" placeholder="Objet du Message" id="subject" name="subject" required>
                                     <div class="invalid-feedback">Veuillez spécifier l'objet!!</div>
                                 </div>
                             </div>
                             <div class="mb-4">
-                                <textarea class="form-control bg-secondary text-white border-secondary" rows="5" placeholder="Votre Message Détaillé..." required></textarea>
+                                <textarea class="form-control bg-secondary text-white border-secondary" rows="5" placeholder="Votre Message Détaillé..." id="message" name="message" rows="5" required></textarea>
                                 <div class="invalid-feedback">Le message ne peut pas être vide!!</div>
                             </div>
                             <div class="text-center">
