Améliration de mon CV

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 <div class="col-md-6 mb-3">
                                     <div class="input-group">
                                         <span class="input-group-text bg-primary border-primary text-white"><i class="bi bi-person-badge"></i></span>
-                                        <input type="text" class="form-control bg-secondary text-white border-secondary" placeholder="Votre Nom Complet" id="subject" name="subject" required>
+                                        <input type="text" class="form-control bg-secondary text-white border-secondary" placeholder="Votre Nom Complet" id="name" name="name" required>
                                         <div class="invalid-feedback">Veuillez entrer votre nom!!</div>
                                     </div>
                                 </div>
