--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                  <p>Je suis une étudiante en 2éme année filière IAP dans FSSM. Une fille passionée par l'informatique et tous ce qui lié au résolution de problémes..</p> 
                  <a href="#apropos" class="btn btn-primary btn-lg mt-4 me-3" data-target="apropos"><i class="bi bi-arrow-right-circle-fill"></i> Découvrir plus..</a>  
                  <div class="acceuil mt-4">
-                    <a href="https://web.facebook.com/profile.php?id=100049625705636" target="_blank"><i class="bi bi-facebook"></i></a>
+                    <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
                     <a href="https://github.com/maitsidilhassane1794-rgb" target="_blank"><i class="bi bi-github"></i></a>
-                    <a href="https://www.linkedin.com/in/mariame-aitsidilhassane-868716337/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                    <a href="mailto:meryemaitsidilhassane@email.com"><i class="bi bi-envelope-at"></i></a>
+                    <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href=""><i class="bi bi-envelope-at"></i></a>
                  </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     
              <div class="col-lg-4 text-center mb-4 mb-lg-0">
                  <div class="profile-card card bg-dark text-white p-3 border-secondary">
-                         <img src="profilecv.png" alt="Photo de Mariame" class="img-fluid rounded-circle mb-3 profile-photo " id="profile-photo"
+                         <img src="" alt="" class="img-fluid rounded-circle mb-3 profile-photo " id="profile-photo"
                          data-bs-toggle="tooltip" data-bs-placement="bottom" title="Survolez pour changer l'image <3 ">
                          <h4 class="card-title">Mariame aitsidilhassane</h4>
                          <p class="card-text text-white-50">Étudiante IAP</p>
